--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,83 +1,73 @@
----
-
-### 🧾 `requirements.txt`
-
-```txt
-boto3
-pyspark
-pandas
-psycopg2-binary
-kafka-python
-
 version: '3.8'
 
 services:
+
   zookeeper:
-    image: confluentinc/cp-zookeeper:7.5.0
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
+    image: wurstmeister/zookeeper
+    ports:
+      - "2181:2181"
 
   kafka:
-    image: confluentinc/cp-kafka:7.5.0
+    image: wurstmeister/kafka
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     depends_on:
       - zookeeper
+
+  postgres:
+    image: postgres:13
     environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      POSTGRES_USER: airflow
+      POSTGRES_PASSWORD: airflow
+      POSTGRES_DB: nyc
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
 
   minio:
     image: minio/minio
+    command: server /data --console-address ":9001"
     environment:
-      MINIO_ACCESS_KEY: minioadmin
-      MINIO_SECRET_KEY: minioadmin
-    command: server /data
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
     ports:
       - "9000:9000"
       - "9001:9001"
     volumes:
-      - minio_data:/data
-
-  postgres:
-    image: postgres:14
-    restart: always
-    environment:
-      POSTGRES_USER: airflow
-      POSTGRES_PASSWORD: airflow
-      POSTGRES_DB: taxi_data
-    ports:
-      - "5432:5432"
-    volumes:
-      - pg_data:/var/lib/postgresql/data
+      - ./minio/data:/data
 
   spark:
     image: bitnami/spark:latest
     environment:
-      SPARK_MODE: master
-    ports:
-      - "8080:8080"
+      - SPARK_MODE=master
+      - AWS_ACCESS_KEY_ID=minioadmin
+      - AWS_SECRET_ACCESS_KEY=minioadmin
+      - SPARK_JAVA_OPTS=-Dspark.hadoop.fs.s3a.endpoint=http://minio:9000
+    volumes:
+      - ./spark:/spark
+    depends_on:
+      - minio
+      - postgres
 
   airflow:
-    image: apache/airflow:2.8.0
+    image: puckel/docker-airflow:1.10.9
+    environment:
+      - LOAD_EX=n
+      - EXECUTOR=SequentialExecutor
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./airflow/dags:/usr/local/airflow/dags
     depends_on:
       - postgres
-    environment:
-      AIRFLOW__CORE__EXECUTOR: LocalExecutor
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/taxi_data
-    volumes:
-      - ./airflow/dags:/opt/airflow/dags
-    ports:
-      - "8088:8080"
-    command: webserver
 
   superset:
     image: apache/superset
-    environment:
-      SUPERSET_ENV: production
     ports:
-      - "8081:8088"
-
-volumes:
-  pg_data:
-  minio_data:
+      - "8088:8088"
+    depends_on:
+      - postgres
